prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: vote
spec:
  replicas: 5
  strategy: 
    blueGreen: null
    canary:
      canaryService: vote-preview
      stableService: vote
      steps:
      - setCanaryScale:
          replicas: 2
      - experiment:
          duration: 3m
          templates:
          - name: canary
            specRef: canary
            service:
              name: experiment
          analysis:
            - name: fitness-test
              templateName: canary-fitness-test

      - setWeight: 20
      - pause: 
          duration: 10s
      - setWeight: 40
      - pause: 
          duration: 10s
      - setWeight: 60
      - pause: 
          duration: 10s
      - analysis:
          templates:
          #- templateName: loadtest
          - templateName: latency
      - setWeight: 80
      - pause: 
          duration: 10s
      - setWeight: 100
      trafficRouting:
        nginx:
          stableIngress: vote
          additionalIngressAnnotations:
            canary-by-header: X-Canary
            canary-by-header-value: siege
  template:
    spec:
      containers:
      - image: schoolofdevops/vote:v4
        name: vote
