prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  labels:
    role: vote
spec:
  selector:
    app: vote
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
