prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    #cert-manager.io/issue-temporary-certificate: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vote.danmaxim.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
  tls:
  - hosts:
    - vote.danmaxim.net
    secretName: vote-tls
